# Lab_2_Pascal_Execution

./: CMakeLists.txt  README.md
app/: BinHeap_queue.cpp  CMakeLists.txt  HListApp.cpp  ListApp.cpp
include/: CMakeLists.txt
include/BinHeap/: BinHeap.h
include/HierarchicalList/: HierarchicalList.h
include/List/: THeadList.h  TList.h  TNode.h
include/Stack/: stack.h
include/Table/: tablearrsort.h  tablerec.h
include/postfix/: postfix.h
src/: CMakeLists.txt
src/BinHeap/: CMakeLists.txt
src/HierarchicalList/: CMakeLists.txt
src/List/: TList.cpp
src/Stack/: stack.cpp
src/Table/: table.cpp
src/postfix/: CMakeLists.txt  postfix.cpp
test/: CMakeLists.txt
test/binheap/: BinHeap_queue.cpp
test/hlist/: HListTest.cpp
test/list/: ListTest.cpp
test/postfix/: PostfixTest.cpp
test/stack/: StackTest.cpp
test/table/: TableSortArrTest.cpp
